<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </SurfaceView>

    <com.milestone.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/transparent" >
    </com.milestone.ViewfinderView>

    <LinearLayout
        android:id="@+id/result_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/result_view"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/scan_result_view_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dip"
                    android:text="@string/msg_default_result"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/scan_result_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/scan_result_text"
                    android:textSize="14sp"
                    android:textStyle="bold" >
                </TextView>

                <ImageView
                    android:id="@+id/barcode_image_view"
                    android:layout_width="160dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dip"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/barcode_image"
                    android:maxHeight="160dip"
                    android:maxWidth="160dip"
                    android:scaleType="centerInside" >
                </ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/attendance_name_view_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dip"
                    android:text="@string/msg_default_name"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/attendance_name_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/attendace_level_view_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dip"
                    android:text="@string/msg_default_level"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/attendace_level_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/attendance_description_view_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dip"
                    android:text="@string/msg_default_description"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/attendance_description_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sn_view_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dip"
                    android:text="@string/msg_default_sn"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/sn_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/result_minor_text"
                    android:textSize="14sp" >
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/status_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/transparent"
            android:text="@string/msg_default_status"
            android:textColor="@color/status_text"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

</FrameLayout>